--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -16,9 +16,14 @@
         <div class="navbar navbar-inverse navbar-fixed-top">
             <nav class="container">
                 <a class="navbar-brand" href="#/">Visual Studio Extension Gallery</a>
-                <ul class="nav navbar-nav pull-right">
-                    <li><a class="pull-right" href="#upload">Upload new extension</a></li>
-                </ul>
+				<ul class="nav navbar-nav pull-right">
+					<li>
+						<a class="pull-right" href="/home/feed">
+							<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
+						</a>
+					</li>
+					<li><a class="pull-right" href="#upload">Upload new extension</a></li>
+				</ul>
             </nav>
         </div>
 
