--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -14,9 +14,14 @@
         <div class="navbar navbar-inverse navbar-fixed-top">
             <nav class="container">
                 <a class="navbar-brand" href="#/">Visual Studio Extension Gallery</a>
-                <ul class="nav navbar-nav pull-right">
-                    <li><a class="pull-right" href="#upload">Upload new extension</a></li>
-                </ul>
+				<ul class="nav navbar-nav pull-right">
+					<li>
+						<a class="pull-right" href="/home/feed">
+							<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
+						</a>
+					</li>
+					<li><a class="pull-right" href="#upload">Upload new extension</a></li>
+				</ul>
             </nav>
         </div>
 
@@ -31,6 +36,6 @@
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-    <script src="js/optimized.fb1c2ad1.js"></script>
+    <script src="js/optimized.8d70c61e.js"></script>
 </body>
 </html>
