--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -2,9 +2,9 @@
 <html lang="en" ng-app="galleryApp">
 <head>
     <meta charset="utf-8" />
-    <title>Visual Studio Gallery</title>
+    <title>Visual Studio Extension Gallery</title>
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/site.8800e99c.css">
+    <link rel="stylesheet" href="/css/site.29a73349.css">
     <base href="/" />
 </head>
 <body>
@@ -20,7 +20,11 @@
 							<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Feed
 						</a>
 					</li>
-					<li><a class="pull-right" href="#upload">Upload new extension</a></li>
+					<li>
+						<a class="pull-right" href="#upload">
+							<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload new extension
+						</a>
+					</li>
 				</ul>
             </nav>
         </div>
@@ -36,6 +40,6 @@
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-    <script src="js/optimized.8d70c61e.js"></script>
+    <script src="js/optimized.7dfc3b78.js"></script>
 </body>
 </html>
