--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -29,11 +29,11 @@
         <main>
             <ng-view></ng-view>
         </main>
-
-        <footer>
-            Copyright &copy; 2014 <a href="http://madskristensen">Mads Kristensen</a>
-        </footer>
     </div>
+
+	<footer class="container">
+		Copyright &copy; 2014 <a href="http://madskristensen">Mads Kristensen</a>
+	</footer>
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
