--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Visual Studio Extension Gallery</title>
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/site.8768aaa9.css">
+    <link rel="stylesheet" href="/css/site.0cffc2de.css">
     <base href="/" />
 </head>
 <body>
@@ -27,14 +27,14 @@
         <main>
             <ng-view></ng-view>
         </main>
-
-        <footer>
-            Copyright &copy; 2014 <a href="http://madskristensen">Mads Kristensen</a>
-        </footer>
     </div>
+
+	<footer class="container">
+		Copyright &copy; 2014 <a href="http://madskristensen">Mads Kristensen</a>
+	</footer>
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-    <script src="js/optimized.3fb1472e.js"></script>
+    <script src="js/optimized.a7faf835.js"></script>
 </body>
 </html>
