--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -15,7 +15,7 @@
 
         <div class="navbar navbar-inverse navbar-fixed-top">
             <nav class="container">
-                <a class="navbar-brand" href="#/">Visual Studio Extension Gallery</a>
+                <a class="navbar-brand" href="/">Visual Studio Extension Gallery</a>
 				<ul class="nav navbar-nav pull-right">
 					<li>
 						<a class="pull-right" href="#upload">
@@ -26,7 +26,7 @@
             </nav>
         </div>
 
-        <main>
+        <main >
             <ng-view></ng-view>
         </main>
     </div>
