--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Visual Studio Extension Gallery</title>
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/site.beffd033.css">
+    <link rel="stylesheet" href="/css/site.83bbe1d3.css">
     <base href="/" />
 </head>
 <body>
@@ -13,7 +13,7 @@
 
         <div class="navbar navbar-inverse navbar-fixed-top">
             <nav class="container">
-                <a class="navbar-brand" href="#/">Visual Studio Extension Gallery</a>
+                <a class="navbar-brand" href="/">Visual Studio Extension Gallery</a>
 				<ul class="nav navbar-nav pull-right">
 					<li>
 						<a class="pull-right" href="#upload">
@@ -24,7 +24,7 @@
             </nav>
         </div>
 
-        <main>
+        <main >
             <ng-view></ng-view>
         </main>
     </div>
@@ -35,6 +35,6 @@
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-    <script src="js/optimized.13b21591.js"></script>
+    <script src="js/optimized.70acbc7b.js"></script>
 </body>
 </html>
