--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Visual Studio Extension Gallery</title>
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
     <!-- build:css /css/site.css -->
     <link href="/css/site.css" rel="stylesheet" />
     <!-- endbuild -->
