--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Visual Studio Extension Gallery</title>
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
     <link rel="stylesheet" href="/css/site.83bbe1d3.css">
     <base href="/" />
 </head>
@@ -35,6 +36,6 @@
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-    <script src="js/optimized.4197d8ac.js"></script>
+    <script src="js/optimized.d69049e9.js"></script>
 </body>
 </html>
