--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
-<html lang="en" ng-app="galleryApp">
+<html lang="en" data-ng-app="galleryApp">
 <head>
-    <meta charset="utf-8" />
     <title>Visual Studio Extension Gallery</title>
+    <meta charset="utf-8" />
+	<meta name="description" content="An alternative Visual Studio extension gallery." />
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
     <!-- build:css /css/site.css -->
@@ -15,8 +16,8 @@
     <div class="container">
 
         <div class="navbar navbar-inverse navbar-fixed-top">
-            <nav class="container">
-                <a class="navbar-brand" href="/">Visual Studio Extension Gallery</a>
+            <nav class="container" role="navigation">
+                <a class="navbar-brand" href="#/">Visual Studio Extension Gallery</a>
 				<ul class="nav navbar-nav pull-right">
 					<li>
 						<a class="pull-right" href="#upload">
@@ -27,12 +28,12 @@
             </nav>
         </div>
 
-        <main >
-            <ng-view></ng-view>
+        <main role="main">
+            <div data-ng-view></div>
         </main>
     </div>
 
-	<footer class="container">
+	<footer class="container" role="contentinfo">
 		Copyright &copy; 2015 <a href="http://madskristensen">Mads Kristensen</a>
 	</footer>
 
