--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en" data-ng-app="galleryApp">
 <head>
-    <title>Visual Studio Extension Gallery</title>
+    <title data-ng-bind="pageTitle">Visual Studio Extension Gallery</title>
     <meta charset="utf-8" />
 	<meta name="description" content="An alternative Visual Studio extension gallery." />
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
