--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en" data-ng-app="galleryApp">
 <head>
-    <title>Visual Studio Extension Gallery</title>
+    <title data-ng-bind="pageTitle">Visual Studio Extension Gallery</title>
     <meta charset="utf-8" />
 	<meta name="description" content="An alternative Visual Studio extension gallery." />
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
@@ -37,6 +37,6 @@
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-    <script src="js/optimized.a22d8f7c.js"></script>
+    <script src="js/optimized.9c688cd5.js"></script>
 </body>
 </html>
