--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en" data-ng-app="galleryApp">
 <head>
-    <title data-ng-bind="pageTitle">Visual Studio Extension Gallery</title>
+    <title data-ng-bind="pageTitle">VSIX Gallery</title>
     <meta charset="utf-8" />
 	<meta name="description" content="An alternative Visual Studio extension gallery." />
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
-    <link rel="stylesheet" href="/css/site.b1436857.css">
+    <link rel="stylesheet" href="/css/site.a40ade51.css">
     <base href="/" />
 </head>
 <body>
