--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -4,7 +4,7 @@
     <title data-ng-bind="pageTitle">VSIX Gallery</title>
     <meta charset="utf-8" />
 	<meta name="description" content="An alternative Visual Studio extension gallery." />
-    <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
     <!-- build:css /css/site.css -->
     <link href="/css/site.css" rel="stylesheet" />
@@ -38,7 +38,7 @@
 	</footer>
 
     <script src="lib/angular/angular.min.js"></script>
-    <script src="lib/angular-route/angular-route.js"></script>
+    <script src="lib/angular-route/angular-route.min.js"></script>
     <!-- build:js js/optimized.js -->
     <script src="/app.js"></script>
     <script src="/config.js"></script>
