--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -4,7 +4,7 @@
     <title data-ng-bind="pageTitle">VSIX Gallery</title>
     <meta charset="utf-8" />
 	<meta name="description" content="An alternative Visual Studio extension gallery." />
-    <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
     <link rel="stylesheet" href="/css/site.a40ade51.css">
     <base href="/" />
@@ -36,7 +36,7 @@
 	</footer>
 
     <script src="lib/angular/angular.min.js"></script>
-    <script src="lib/angular-route/angular-route.js"></script>
+    <script src="lib/angular-route/angular-route.min.js"></script>
     <script src="js/optimized.df02f216.js"></script>
 </body>
 </html>
