Renamed upload button

--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -19,7 +19,7 @@
 				<ul class="nav navbar-nav pull-right">
 					<li>
 						<a class="pull-right" href="#upload">
-							<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload new extension
+							<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
 						</a>
 					</li>
 				</ul>
