--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -1,53 +1,52 @@
 ﻿<!DOCTYPE html>
 <html lang="en" data-ng-app="galleryApp">
 <head>
-    <title data-ng-bind="pageTitle">VSIX Gallery</title>
-    <meta charset="utf-8" />
+	<title data-ng-bind="pageTitle">VSIX Gallery</title>
+	<meta charset="utf-8" />
 	<meta name="description" content="An alternative Visual Studio extension gallery." />
-    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
-    <!-- build:css /css/site.css -->
-    <link href="/css/site.css" rel="stylesheet" />
-    <!-- endbuild -->
-    <base href="/" />
+	<!-- build:css /css/site.css -->
+	<link href="/css/site.css" rel="stylesheet" />
+	<!-- endbuild -->
+	<base href="/" />
 </head>
 <body>
 
-    <div class="container">
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<nav class="container" role="navigation">
+			<a class="navbar-brand" ng-href="/">Visual Studio Extension Gallery</a>
+			<ul class="nav navbar-nav pull-right">
+				<li>
+					<a class="pull-right" ng-href="/upload">
+						<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <nav class="container" role="navigation">
-                <a class="navbar-brand" href="#/">Visual Studio Extension Gallery</a>
-				<ul class="nav navbar-nav pull-right">
-					<li>
-						<a class="pull-right" href="#upload">
-							<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
-						</a>
-					</li>
-				</ul>
-            </nav>
-        </div>
-
-        <main role="main">
-            <div data-ng-view></div>
-        </main>
-    </div>
+	<div class="container">
+		<main role="main">
+			<div data-ng-view></div>
+		</main>
+	</div>
 
 	<footer class="container" role="contentinfo">
 		Copyright &copy; 2015 <a href="http://madskristensen">Mads Kristensen</a>
 	</footer>
 
-    <script src="lib/angular/angular.min.js"></script>
-    <script src="lib/angular-route/angular-route.min.js"></script>
-    <!-- build:js js/optimized.js -->
-    <script src="/app.js"></script>
-    <script src="/config.js"></script>
-    <script src="/services/gallery.js"></script>
-    <script src="/controllers/home.js"></script>
-    <script src="/controllers/extension.js"></script>
-    <script src="/controllers/upload.js"></script>
-    <script src="/views/templates.js"></script>
-	<script src="controllers/author.js"></script>
-    <!-- endbuild -->
+	<script src="lib/angular/angular.min.js" async></script>
+	<script src="lib/angular-route/angular-route.min.js" async></script>
+	<!-- build:js js/optimized.js -->
+	<script src="/app.js" async></script>
+	<script src="/config.js" async></script>
+	<script src="/services/gallery.js" async></script>
+	<script src="/controllers/home.js" async></script>
+	<script src="/controllers/extension.js" async></script>
+	<script src="/controllers/upload.js" async></script>
+	<script src="/views/templates.js" async></script>
+	<script src="controllers/author.js" async></script>
+	<!-- endbuild -->
 </body>
 </html>
