--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -1,42 +1,41 @@
 ﻿<!DOCTYPE html>
 <html lang="en" data-ng-app="galleryApp">
 <head>
-    <title data-ng-bind="pageTitle">VSIX Gallery</title>
-    <meta charset="utf-8" />
+	<title data-ng-bind="pageTitle">VSIX Gallery</title>
+	<meta charset="utf-8" />
 	<meta name="description" content="An alternative Visual Studio extension gallery." />
-    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
-    <link rel="stylesheet" href="/css/site.a40ade51.css">
-    <base href="/" />
+	<link rel="stylesheet" href="/css/site.959fc420.css">
+	<base href="/" />
 </head>
 <body>
 
-    <div class="container">
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<nav class="container" role="navigation">
+			<a class="navbar-brand" ng-href="/">Visual Studio Extension Gallery</a>
+			<ul class="nav navbar-nav pull-right">
+				<li>
+					<a class="pull-right" ng-href="/upload">
+						<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <nav class="container" role="navigation">
-                <a class="navbar-brand" href="#/">Visual Studio Extension Gallery</a>
-				<ul class="nav navbar-nav pull-right">
-					<li>
-						<a class="pull-right" href="#upload">
-							<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
-						</a>
-					</li>
-				</ul>
-            </nav>
-        </div>
-
-        <main role="main">
-            <div data-ng-view></div>
-        </main>
-    </div>
+	<div class="container">
+		<main role="main">
+			<div data-ng-view></div>
+		</main>
+	</div>
 
 	<footer class="container" role="contentinfo">
 		Copyright &copy; 2015 <a href="http://madskristensen">Mads Kristensen</a>
 	</footer>
 
-    <script src="lib/angular/angular.min.js"></script>
-    <script src="lib/angular-route/angular-route.min.js"></script>
-    <script src="js/optimized.df02f216.js"></script>
+	<script src="lib/angular/angular.min.js" async></script>
+	<script src="lib/angular-route/angular-route.min.js" async></script>
+	<script async src="js/optimized.30ec4ef5.js"></script>
 </body>
 </html>
