--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -36,17 +36,17 @@
 		Copyright &copy; 2015 <a href="http://madskristensen">Mads Kristensen</a>
 	</footer>
 
-	<script src="lib/angular/angular.min.js" async></script>
-	<script src="lib/angular-route/angular-route.min.js" async></script>
+	<script src="lib/angular/angular.min.js"></script>
+	<script src="lib/angular-route/angular-route.min.js"></script>
 	<!-- build:js js/optimized.js -->
-	<script src="/app.js" async></script>
-	<script src="/config.js" async></script>
-	<script src="/services/gallery.js" async></script>
-	<script src="/controllers/home.js" async></script>
-	<script src="/controllers/extension.js" async></script>
-	<script src="/controllers/upload.js" async></script>
-	<script src="/views/templates.js" async></script>
-	<script src="controllers/author.js" async></script>
+	<script src="/app.js"></script>
+	<script src="/config.js"></script>
+	<script src="/services/gallery.js"></script>
+	<script src="/controllers/home.js"></script>
+	<script src="/controllers/extension.js"></script>
+	<script src="/controllers/upload.js"></script>
+	<script src="/views/templates.js"></script>
+	<script src="controllers/author.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
