--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -34,8 +34,8 @@
 		Copyright &copy; 2015 <a href="http://madskristensen">Mads Kristensen</a>
 	</footer>
 
-	<script src="lib/angular/angular.min.js" async></script>
-	<script src="lib/angular-route/angular-route.min.js" async></script>
-	<script async src="js/optimized.30ec4ef5.js"></script>
+	<script src="lib/angular/angular.min.js"></script>
+	<script src="lib/angular-route/angular-route.min.js"></script>
+	<script src="js/optimized.fa1ee26e.js"></script>
 </body>
 </html>
