--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -4,19 +4,22 @@
 	<title data-ng-bind="pageTitle">VSIX Gallery</title>
 	<meta charset="utf-8" />
 	<meta name="description" content="An alternative Visual Studio extension gallery." />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 	<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
-	<link rel="stylesheet" href="/css/site.959fc420.css">
+
+	<link rel="stylesheet" href="/css/site.ec4280cb.css">
 	<base href="/" />
 </head>
 <body>
 
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<nav class="container" role="navigation">
-			<a class="navbar-brand" ng-href="/">Visual Studio Extension Gallery</a>
+			<a class="navbar-brand" data-ng-href="/">Visual Studio Extension Gallery</a>
 			<ul class="nav navbar-nav pull-right">
 				<li>
-					<a class="pull-right" ng-href="/upload">
+					<a class="pull-right" data-ng-href="/upload">
 						<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
 					</a>
 				</li>
@@ -31,11 +34,11 @@
 	</div>
 
 	<footer class="container" role="contentinfo">
-		Copyright &copy; 2015 <a href="http://madskristensen">Mads Kristensen</a>
+		Copyright &copy; 2015 <a href="http://madskristensen.net">Mads Kristensen</a>
 	</footer>
 
 	<script src="lib/angular/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
-	<script src="js/optimized.fa1ee26e.js"></script>
+	<script src="js/optimized.ff2fd3f1.js"></script>
 </body>
 </html>
