Self bootstrapping angular app

--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" data-ng-app="galleryApp">
+<html lang="en">
 <head>
 	<title data-ng-bind="pageTitle">VSIX Gallery</title>
 	<meta charset="utf-8" />
@@ -42,14 +42,15 @@
 	<script src="lib/angular/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
 	<!-- build:js js/optimized.js -->
-	<script src="/app.js"></script>
-	<script src="/config.js"></script>
-	<script src="/services/gallery.js"></script>
-	<script src="/controllers/home.js"></script>
-	<script src="/controllers/extension.js"></script>
-	<script src="/controllers/upload.js"></script>
-	<script src="/views/templates.js"></script>
-	<script src="controllers/author.js"></script>
+	<script async src="/app.js"></script>
+	<script async src="/config.js"></script>
+	<script async src="/services/gallery.js"></script>
+	<script async src="/controllers/home.js"></script>
+	<script async src="/controllers/extension.js"></script>
+	<script async src="/controllers/upload.js"></script>
+	<script async src="/views/templates.js"></script>
+	<script async src="controllers/author.js"></script>
+	<script async src="app.bootstrap.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
