--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" data-ng-app="galleryApp">
+<html lang="en">
 <head>
 	<title data-ng-bind="pageTitle">VSIX Gallery</title>
 	<meta charset="utf-8" />
@@ -9,7 +9,7 @@
 	<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
 
-	<link rel="stylesheet" href="/css/site.ec4280cb.css">
+	<link rel="stylesheet" href="/css/site.0f349c97.css">
 	<base href="/" />
 </head>
 <body>
@@ -39,6 +39,6 @@
 
 	<script src="lib/angular/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
-	<script src="js/optimized.ff2fd3f1.js"></script>
+	<script async src="js/optimized.b64889d9.js"></script>
 </body>
 </html>
