--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -9,8 +9,29 @@
 	<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
 
-	<link rel="stylesheet" href="/css/site.04c1c612.css">
+	<link rel="stylesheet" href="/css/site.eda93c78.css">
 	<base href="/" />
+
+	<meta name="application-name" content="Visual Studio Extension Gallery" />
+	<link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/img/favicon/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/img/favicon/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/img/favicon/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/img/favicon/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon/apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon-180x180.png">
+	<link rel="icon" type="image/png" href="/img/favicon/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/img/favicon/android-chrome-192x192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="/img/favicon/favicon-96x96.png" sizes="96x96">
+	<link rel="icon" type="image/png" href="/img/favicon/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="/img/favicon/android-chrome-manifest.json">
+	<link rel="shortcut icon" href="/img/favicon/favicon.ico">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/img/favicon/mstile-144x144.png">
+	<meta name="msapplication-config" content="/img/favicon/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
 
@@ -39,6 +60,6 @@
 
 	<script src="lib/angular/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
-	<script async src="js/optimized.a719ffb0.js"></script>
+	<script async src="js/optimized.3feb9a49.js"></script>
 </body>
 </html>
