--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<title data-ng-bind="pageTitle">VSIX Gallery</title>
+	<title data-ng-bind="pageTitle">Visual Studio Extension Gallery</title>
 	<meta charset="utf-8" />
 	<meta name="description" content="An alternative Visual Studio extension gallery." />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,7 +28,6 @@
 	<link rel="icon" type="image/png" href="/img/favicon/favicon-16x16.png" sizes="16x16">
 	<link rel="manifest" href="/img/favicon/android-chrome-manifest.json">
 	<link rel="shortcut icon" href="/img/favicon/favicon.ico">
-	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/img/favicon/mstile-144x144.png">
 	<meta name="msapplication-config" content="/img/favicon/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
