--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -9,7 +9,7 @@
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
 
-	<link rel="stylesheet" href="/css/site.eb17ae78.css">
+	<link rel="stylesheet" href="/css/site.415fb62c.415fb62c.css">
 	<base href="/" />
 
 	<meta name="application-name" content="Visual Studio Extension Gallery" />
@@ -73,6 +73,6 @@
 	<!--<script src="lib/angular/angular.min.js"></script>-->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
-	<script async src="js/optimized.5a2e93c2.js"></script>
+	<script async src="js/optimized.5a2e93c2.5a2e93c2.js"></script>
 </body>
 </html>
