Added feed guide

--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -9,7 +9,7 @@
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
 
-	<link rel="stylesheet" href="/css/site.415fb62c.415fb62c.css">
+	<link rel="stylesheet" href="/css/site.2ce09270.css">
 	<base href="/" />
 
 	<meta name="application-name" content="Visual Studio Extension Gallery" />
@@ -52,7 +52,7 @@
 			<a class="navbar-brand" href="/">Visual Studio Extension Gallery</a>
 			<ul class="nav navbar-nav pull-right">
 				<li>
-					<a class="pull-right" href="/upload">
+					<a href="/upload">
 						<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
 					</a>
 				</li>
@@ -61,18 +61,33 @@
 	</header>
 
 	<div class="container">
-		<main role="main">
-			<div data-ng-view></div>
+		<main role="main" class="row">
+			<div data-ng-view class="col col-md-12"></div>
 		</main>
 	</div>
 
-	<footer class="container" role="contentinfo">
-		Copyright &copy; 2015 <a href="http://madskristensen.net">Mads Kristensen</a>
+	<footer class="" role="contentinfo">
+		<div class="container">
+			<ul class="pull-left">
+				<li><h4>Visual Studio</h4></li>
+				<li><a href="/guide/feed">Subscribe to feed</a></li>
+			</ul>
+			<ul class="pull-left">
+				<li><h4>Developers</h4></li>
+				<li><a href="https://github.com/madskristensen/ExtensionGallery">Contribute on GitHub</a></li>
+				<li><a href="https://github.com/madskristensen/ExtensionScripts/blob/master/AppVeyor/vsix.ps1">PowerShell build script</a></li>
+				<li><a href="https://github.com/madskristensen/ExtensionScripts/blob/master/AppVeyor/appveyor.yml">AppVeyor integration</a></li>
+			</ul>
+
+			<p class="copyright pull-right">
+				Copyright &copy; 2015 <a href="http://madskristensen.net">Mads Kristensen</a>
+			</p>
+		</div>
 	</footer>
 
 	<!--<script src="lib/angular/angular.min.js"></script>-->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
-	<script async src="js/optimized.5a2e93c2.5a2e93c2.js"></script>
+	<script async src="js/optimized.56c325f5.js"></script>
 </body>
 </html>
