Renamed to "Open VSIX Gallery"

--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -51,7 +51,7 @@
 
 	<header class="navbar navbar-inverse navbar-fixed-top">
 		<nav class="container" role="navigation">
-			<a class="navbar-brand" href="/">Visual Studio Extension Gallery</a>
+			<a class="navbar-brand" href="/">Open VSIX Gallery</a>
 			<ul class="nav navbar-nav pull-right">
 				<li>
 					<a href="/upload">
