--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -49,7 +49,7 @@
 
 	<header class="navbar navbar-inverse navbar-fixed-top">
 		<nav class="container" role="navigation">
-			<a class="navbar-brand" href="/">Visual Studio Extension Gallery</a>
+			<a class="navbar-brand" href="/">Open VSIX Gallery</a>
 			<ul class="nav navbar-nav pull-right">
 				<li>
 					<a href="/upload">
@@ -88,6 +88,6 @@
 	<!--<script src="lib/angular/angular.min.js"></script>-->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
-	<script async src="js/optimized.ea0a66d8.js"></script>
+	<script async src="js/optimized.7f8498dc.js"></script>
 </body>
 </html>
