Add controller so feed guide page title works

--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -98,7 +98,8 @@
 	<script async src="/controllers/extension.js"></script>
 	<script async src="/controllers/upload.js"></script>
 	<script async src="/views/templates.js"></script>
-	<script async src="controllers/author.js"></script>
+	<script async src="/controllers/author.js"></script>
+	<script async src="/controllers/feedguide.js"></script>
 	<script async src="app.bootstrap.js"></script>
 	<!-- endbuild -->
 </body>
