--- a/src/ExtensionGallery/app/index.html
+++ b/src/ExtensionGallery/app/index.html
@@ -52,13 +52,13 @@
 	<header class="navbar navbar-inverse navbar-fixed-top">
 		<nav class="container" role="navigation">
 			<a class="navbar-brand" href="/">Open VSIX Gallery</a>
-			<ul class="nav navbar-nav pull-right">
+			<!--<ul class="nav navbar-nav pull-right">
 				<li>
 					<a href="/upload">
 						<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
 					</a>
 				</li>
-			</ul>
+			</ul>-->
 		</nav>
 	</header>
 
@@ -72,13 +72,12 @@
 		<div class="container">
 			<ul class="pull-left">
 				<li><h4>Visual Studio</h4></li>
-				<li><a href="/guide/feed">Subscribe to feed</a></li>
+				<li><a href="/guide/feed">How to subscribe to feed</a></li>
 			</ul>
 			<ul class="pull-left">
 				<li><h4>Developers</h4></li>
-				<li><a href="https://github.com/madskristensen/ExtensionGallery">Contribute on GitHub</a></li>
-				<li><a href="https://github.com/madskristensen/ExtensionScripts/blob/master/AppVeyor/vsix.ps1">PowerShell build script</a></li>
-				<li><a href="https://github.com/madskristensen/ExtensionScripts/blob/master/AppVeyor/appveyor.yml">AppVeyor integration</a></li>
+                <li><a href="/guide/dev">Add your extension</a></li>
+				<li><a href="https://github.com/madskristensen/ExtensionGallery">Source on GitHub</a></li>
 			</ul>
 
 			<p class="copyright pull-right">
@@ -90,6 +89,7 @@
 	<!--<script src="lib/angular/angular.min.js"></script>-->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
+    <script src="lib/moment/moment.min.js"></script>
 	<!-- build:js js/optimized.js -->
 	<script async src="/app.js"></script>
 	<script async src="/config.js"></script>
@@ -100,6 +100,7 @@
 	<script async src="/views/templates.js"></script>
 	<script async src="/controllers/author.js"></script>
 	<script async src="/controllers/feedguide.js"></script>
+    <script async src="/controllers/devguide.js"></script>
 	<script async src="app.bootstrap.js"></script>
 	<!-- endbuild -->
 </body>
