--- a/src/ExtensionGallery/wwwroot/index.html
+++ b/src/ExtensionGallery/wwwroot/index.html
@@ -9,7 +9,7 @@
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" />
 	<link type="application/atom+xml" rel="alternate" title="VSIX Gallery Feed" href="/feed/" />
 
-	<link rel="stylesheet" href="/css/site.2ce7e99d.css">
+	<link rel="stylesheet" href="/css/site.e83b4137.css">
 	<base href="/" />
 
 	<meta name="application-name" content="Visual Studio Extension Gallery" />
@@ -50,13 +50,13 @@
 	<header class="navbar navbar-inverse navbar-fixed-top">
 		<nav class="container" role="navigation">
 			<a class="navbar-brand" href="/">Open VSIX Gallery</a>
-			<ul class="nav navbar-nav pull-right">
+			<!--<ul class="nav navbar-nav pull-right">
 				<li>
 					<a href="/upload">
 						<span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
 					</a>
 				</li>
-			</ul>
+			</ul>-->
 		</nav>
 	</header>
 
@@ -70,13 +70,12 @@
 		<div class="container">
 			<ul class="pull-left">
 				<li><h4>Visual Studio</h4></li>
-				<li><a href="/guide/feed">Subscribe to feed</a></li>
+				<li><a href="/guide/feed">How to subscribe to feed</a></li>
 			</ul>
 			<ul class="pull-left">
 				<li><h4>Developers</h4></li>
-				<li><a href="https://github.com/madskristensen/ExtensionGallery">Contribute on GitHub</a></li>
-				<li><a href="https://github.com/madskristensen/ExtensionScripts/blob/master/AppVeyor/vsix.ps1">PowerShell build script</a></li>
-				<li><a href="https://github.com/madskristensen/ExtensionScripts/blob/master/AppVeyor/appveyor.yml">AppVeyor integration</a></li>
+                <li><a href="/guide/dev">Add your extension</a></li>
+				<li><a href="https://github.com/madskristensen/ExtensionGallery">Source on GitHub</a></li>
 			</ul>
 
 			<p class="copyright pull-right">
@@ -88,6 +87,7 @@
 	<!--<script src="lib/angular/angular.min.js"></script>-->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 	<script src="lib/angular-route/angular-route.min.js"></script>
-	<script async src="js/optimized.04fe9d64.js"></script>
+    <script src="lib/moment/moment.min.js"></script>
+	<script async src="js/optimized.25213e46.js"></script>
 </body>
 </html>
